fix id based last error concurrency SERVER-535